--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>LUSH</title>
 </head>
 <body>
-    <p>안녕하세요</p>
+    <p>dasf</p>
+    <p>khgkjh</p>
 </body>
 </html>
