--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +7,7 @@
     <title>LUSH</title>
 </head>
 <body>
-    <p>dasf</p>
-    <p>khgkjh</p>
-    <p>dsfd</p>
+    <p>123</p>
+    
 </body>
 </html>
