--- a/index.html
+++ b/index.html
@@ -7,7 +7,25 @@
     <title>LUSH</title>
 </head>
 <body>
-    <p>123</p>
-    
+    <section id="best-and-new">
+        <article class="best">
+            <h2></h2>
+            <div class="best-contents">
+                <figure class="big-image"></figure>
+                <div class="best-inner">
+                    <div class="best-inner-contents">
+                        <h3></h3>
+                        <p class="best-sub-title"></p>
+                        <p class="best-inner-p"></p>
+                    </div>
+                    <div class="best-inner-image">
+                        <figure></figure>
+                        <figure></figure>
+                    </div>
+                </div>
+            </div>
+        </article>
+        <article class="new"></article>
+    </section>
 </body>
 </html>
