--- a/러쉬.html
+++ b/러쉬.html
@@ -108,13 +108,15 @@
 
         <div>
             <div class="background">
-                <div>
+                
+                <div class="spa">
                     <img src="./img/validationfacial_use.jpg" alt="" class="treatment">
-                    <article>
-                        <button>+더 알아보기</button>
-                        <p>LUSH SPA<br>TREAT MENTS</p>
-                    </article>
+                </div>               
+                <div>
+                    <button class="btn3">+더 알아보기</button>
+                    <p class="spatext">LUSH SPA<br>TREAT MENTS</p>
                 </div>
+                
             </div>
         </div>
 
