--- a/러쉬.html
+++ b/러쉬.html
@@ -185,7 +185,7 @@
             <div class="background">
                 <div class="treatbox">
                     <div class="spa">
-                        <img src="./img/validationfacial_use.jpg" alt="트리트먼트" class="treatment">
+                        <img src="img/validationfacial_use.jpg" alt="트리트먼트" class="treatment">
                     </div>               
                 <div>
                     <button class="btn3">+더 알아보기</button>
